--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -22,6 +22,6 @@
 
     - name: Enabling jenkins service
       ansible.builtin.service:
-        name: jenkins.service
-        enable: yes
+        name: jenkins
+        enabled: yes
         state: started
