--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -87,10 +87,15 @@
 
     - name: Install required system packages
       ansible.builtin.apt: 
-        name: {{ item }} 
+        name: "{{ item }}" 
         state: latest 
         update_cache: yes
-        loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools']
+      loop: 
+        - apt-transport-https
+        - ca-certificates 
+        - curl
+        - gnupg
+        - lsb-release
     
     - name: Add Docker GPG apt Key
       ansible.builtin.apt_key:
