--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -90,7 +90,7 @@
         name: "{{ item }}" 
         state: latest 
         update_cache: yes
-      loop: 
+      with_items: 
         - apt-transport-https
         - ca-certificates 
         - curl
