--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -87,17 +87,16 @@
 
     - name: Install required system packages
       ansible.builtin.apt: 
-        name: "{{ packages }}" 
+        name: '{{ items }}' 
         state: latest 
         update_cache: yes
-      vars:
-        packages:  
-          - apt-transport-https
-          - ca-certificates 
-          - curl
-          - gnupg
-          - lsb-release
-          
+      loop:
+        - apt-transport-https
+        - ca-certificates 
+        - curl
+        - gnupg
+        - lsb-release
+
     - name: Add Docker GPG apt Key
       ansible.builtin.apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
