--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -87,15 +87,10 @@
 
     - name: Install required system packages
       ansible.builtin.apt: 
-        name: '{{ item }}' 
+        name: ['apt-transport-https', 'ca-certificates', 'curl', 'gnupg', 'lsb-release']
         state: latest 
         update_cache: yes
-      loop:
-        - apt-transport-https
-        - ca-certificates 
-        - curl
-        - gnupg
-        - lsb-release
+      
 
     - name: Add Docker GPG apt Key
       ansible.builtin.apt_key:
