--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -18,7 +18,7 @@
 
     - name: Add Jenkins GPG apt Key
       ansible.builtin.apt_key:
-        file: https://pkg.jenkins.io/debian-stable/jenkins.io.key
+        url: https://pkg.jenkins.io/debian-stable/jenkins.io.key
         state: present 
 
     - name: Configureing Jenkins repository is configured
