--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -85,7 +85,7 @@
     
     - name: Add Docker Repository
       ansible.builtin.apt_repository:
-        repo: deb https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable
+        repo: deb https://download.docker.com/linux/ubuntu focal stable
         state: present
 
     - name: Update apt and install docker-ce
