--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -85,7 +85,7 @@
     
     - name: Add Docker Repository
       ansible.builtin.apt_repository:
-        repo: deb https://download.docker.com/linux/ubuntu focal stable
+        repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ansible_distribution_release}} stable
         state: present
 
     - name: Update apt and install docker-ce
