--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -80,13 +80,14 @@
 
     - name: Add Docker GPG apt Key
       ansible.builtin.apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
+        url: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
         state: present
     
-    - name: Add Docker Repository
+    - name: Add Docker into sources list
       ansible.builtin.apt_repository:
-        repo: deb [arch=amd64] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ansible_distribution_release}} stable
+        repo: deb [arch={{ ansible_architecture }}] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ansible_distribution_release}} stable
         state: present
+        filename: docker
 
     - name: Update apt and install docker-ce
       ansible.builtin.apt: 
