--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -81,6 +81,7 @@
     - name: Add Docker GPG apt Key
       ansible.builtin.apt_key:
         url: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
+        keyring: /usr/share/keyrings/docker-archive-keyring.gpg
         state: present
     
     - name: Add Docker into sources list
