--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -86,7 +86,7 @@
     
     - name: Add Docker into sources list
       ansible.builtin.apt_repository:
-        repo: deb [arch={{ ansible_architecture }}] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ansible_distribution_release}} stable
+        repo: deb [arch=[amd64]] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ansible_distribution_release}} stable
         state: present
         filename: docker
 
