--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -81,12 +81,11 @@
     - name: Add Docker GPG apt Key
       ansible.builtin.apt_key:
         url: https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }}/gpg
-        keyring: /usr/share/keyrings/docker-archive-keyring.gpg
         state: present
     
     - name: Add Docker into sources list
       ansible.builtin.apt_repository:
-        repo: deb [arch=[amd64]] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ansible_distribution_release}} stable
+        repo: deb [arch=[amd64] https://download.docker.com/{{ ansible_system | lower }}/{{ ansible_distribution | lower }} {{ansible_distribution_release}} stable
         state: present
         filename: docker
 
