--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -113,6 +113,7 @@
         groups: 
           - docker 
           - sudo
+          - wheel
         state: present
         home: /home/jenkins
         generate_ssh_key: yes
