--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -139,6 +139,7 @@
     #     src: 
 
     - name: Copying remote .ssh/id_rsa.pub to .ssh/authorized_keys
+      become_user: root
       ansible.posix.authorized_key:
         user: jenkins
         state: present
