--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -139,7 +139,7 @@
     #     src: 
 
     - name: Copying remote .ssh/id_rsa.pub to .ssh/authorized_keys
-      become_user: root
+      become_method: sudo
       ansible.posix.authorized_key:
         user: jenkins
         state: present
