--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -114,6 +114,7 @@
           - docker 
           - sudo
         append: yes
+        password: ""
         state: present
         home: /home/jenkins
         generate_ssh_key: yes
