--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -55,7 +55,13 @@
         mode: 0700
         owner: jenkins
         group: jenkins
-    
+
+    - name: Add public key from backups_host  
+      ansible.builtin.known_hosts:
+        name: {{ worker_nodes }}
+        path: /var/lib/jenkins/.ssh/known_hosts
+        state: present
+        key: "{{ public_key_data.stdout }}"
     
 - hosts: worker_nodes
   become: true
@@ -138,17 +144,15 @@
     #   ansible.builtin.copy:
     #     src: 
 
-    - name: Copying remote .ssh/id_rsa.pub to .ssh/authorized_keys
-      become_user: root
-      ansible.posix.authorized_key:
-        user: root
-        state: present
-        key: "{{ lookup('file', '/home/jenkins/.ssh/id_rsa.pub') }}"
-
-    # - name: Fetch public key data from worker_nodes
-    #   ansible.builtin.command: cat /home/jenkins/.ssh/authorized_keys
-    #   delegate_to: "{{ worker_nodes }}"
-    #   register: public_key_data
-    
-    # - name: Add public key from backups_host
+    # - name: Copying remote .ssh/id_rsa.pub to .ssh/authorized_keys
+    #   become_user: root
     #   ansible.posix.authorized_key:
+    #     user: root
+    #     state: present
+    #     key: "{{ lookup('file', '/home/jenkins/.ssh/id_rsa.pub') }}"
+
+    - name: Fetch public key data from worker_nodes
+      ansible.builtin.command: cat /home/jenkins/.ssh/authorized_keys
+      delegate_to: "{{ worker_nodes }}"
+      register: public_key_data
+      notify: Add public key from backups_host
