--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -151,13 +151,18 @@
 
     - name: Expire password
       command: chage -d 0 jenkins
+  
+   # Download Maven and Configure the path
+    - name: Download Apache Maven 
+      ansible.builtin.get_url: 
+        url: https://downloads.apache.org/maven/maven-3/3.8.5/binaries/apache-maven-3.8.5-bin.tar.gz
+        dest: /opt/apache/apache-maven-3.8.5-bin.tar.gz
 
-    # - name: Fetching public ssh key to root folder
-    #   ansible.builtin.fetch:
-    #     src: /home/jenkins/.ssh/id_rsa.pub
-    #     dest: /copied-pubkeys
-        
-    # - name: Copying keys to the remote .ssh/authorized_keys file
-    #   ansible.builtin.copy:
-    #     src: 
-
+    - name: Untar Maven 
+      ansible.builtin.shell: 
+        chdir: /opt/apache
+        creates: /opt/apache/apache-maven-3.8.5
+        cmd: tar -zxf apache-maven-3.8.5-bin.tar.gz -C /opt/apache/apache-maven-3.8.5
+    
+    - name: Update path for maven use
+      ansible.builtin.shell: export PATH=/opt/apache/apache-maven-3.1.1/bin:$PATH
