--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -158,6 +158,11 @@
         url: https://downloads.apache.org/maven/maven-3/3.8.5/binaries/apache-maven-3.8.5-bin.tar.gz
         dest: /opt/apache-maven-3.8.5-bin.tar.gz
 
+    - name: Creates Maven directory
+      ansible.builtin.file:
+        path: /opt/apache-maven-3.8.5
+        state: directory
+
     - name: Untar Maven 
       ansible.builtin.shell: 
         chdir: /opt
