--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -169,4 +169,4 @@
         cmd: tar -zxf apache-maven-3.8.5-bin.tar.gz -C /opt/apache-maven-3.8.5
     
     - name: Update path for maven use
-      ansible.builtin.shell: export PATH=/opt/apache-maven-3.8.5/bin:$PATH
+      ansible.builtin.command: export PATH=/opt/apache-maven-3.8.5/bin:$PATH
