--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ bin-release/
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
 docs/Capstone-Project01_updated.pdf
+.vscode/settings.json
