--- a/selenium/dockerfile
+++ b/selenium/dockerfile
@@ -2,4 +2,4 @@ FROM maven:3.8.4-jdk-11
 COPY . /usr/src/selenium-test
 WORKDIR /usr/src/selenium-test
 RUN mvn clean package
-RUN clean compile assembly:single
+RUN mvn clean compile assembly:single
