--- a/selenium/dockerfile
+++ b/selenium/dockerfile
@@ -1,5 +1,6 @@
 FROM maven:3.8.4-jdk-11
 COPY . /usr/src/selenium-test
 WORKDIR /usr/src/selenium-test
+RUN chmod +x driver/chromedriver
 RUN mvn clean package
 RUN mvn clean compile assembly:single
