--- a/selenium/dockerfile
+++ b/selenium/dockerfile
@@ -4,3 +4,4 @@ WORKDIR /usr/src/selenium-test
 RUN chmod +x driver/chromedriver
 RUN mvn clean package
 RUN mvn clean compile assembly:single
+RUN java -jar target/Sele*.jar
