--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -193,8 +193,14 @@
       ansible.builtin.file:
         path: /home/jenkins/output/java
         state: directory
+        owner: jenkins
+        group: jenkins
+        mode: 0777
 
     - name: Creating a directory for retrieving test-out-put from the testing scenario
       ansible.builtin.file:
-        path: /home/jenkins/output/test-results
+        path: /home/jenkins/output/test-output
         state: directory
+        owner: jenkins
+        group: jenkins
+        mode: 0777
