--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -195,6 +195,7 @@
         state: directory
         owner: jenkins
         group: jenkins
+        mode: 0775
 
     - name: Creating a directory for retrieving test-out-put from the testing scenario
       ansible.builtin.file:
@@ -202,3 +203,4 @@
         state: directory
         owner: jenkins
         group: jenkins
+        mode: 0775
